updated home work 2.o