@@ -1,247 +1,127 @@
 package HomeWork13;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
+import org.json.JSONArray;
+import org.json.JSONObject;
 
-import java.io.FileWriter;
-import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.*;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.Scanner;
 
 public class UserApiServiceSecond {
 
-    private static final String BASE_URL = "https://jsonplaceholder.typicode.com";
+    private static final String BASE_URL = "https://jsonplaceholder.typicode.com/users";
 
-    private final HttpClient httpClient;
-    private final ObjectMapper objectMapper;
+    public static void main(String[] args) throws IOException {
 
-    public UserApiServiceSecond() {
-        this.httpClient = HttpClient.newHttpClient();
-        this.objectMapper = new ObjectMapper();
+        System.out.println("Get all users: " + getAllUsers());
+        System.out.println("_________" );
+        System.out.println("Get users by id: " +getUserById(1));
+        System.out.println("_________" );
+        System.out.println("Ger user by name: " + getUserByUsername("Bret"));
+        System.out.println("_________" );
+        System.out.println(createUser(new JSONObject("{\"name\": \"New User\", \"username\": \"newuser\", \"email\": \"newuser@example.com\"}")));
+        System.out.println("_________" );
+        System.out.println(updateUser(1, new JSONObject("{\"name\": \"Updated User\", \"username\": \"updateduser\", \"email\": \"updateduser@example.com\"}")));
+        System.out.println("_________" );
+        System.out.println("Delete user: " + deleteUser(1));
+
+        getCommentsForLastPost(1);
+        getOpenTodos(1);
     }
 
-    public JsonNode createUser(ObjectNode user) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(user.toString()))
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 201) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
+    public static String getAllUsers() throws IOException {
+        return sendRequest(BASE_URL, "GET", null);
     }
 
-    public JsonNode updateUser(int userId, ObjectNode user) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users/" + userId))
-                .header("Content-Type", "application/json")
-                .PUT(HttpRequest.BodyPublishers.ofString(user.toString()))
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
+    public static String getUserById(int id) throws IOException {
+        return sendRequest(BASE_URL + "/" + id, "GET", null);
     }
 
-    public boolean deleteUser(int userId) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users/" + userId))
-                .DELETE()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.statusCode() / 100 == 2;
+    public static String getUserByUsername(String username) throws IOException {
+        return sendRequest(BASE_URL + "?username=" + username, "GET", null);
     }
 
-    public JsonNode getAllUsers() throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users"))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
+    public static String createUser(JSONObject jsonInput) throws IOException {
+        return sendRequest(BASE_URL, "POST", jsonInput.toString());
+    }
+    public static String updateUser(int id, JSONObject jsonInput) throws IOException {
+        return sendRequest(BASE_URL + "/" + id, "PUT", jsonInput.toString());
     }
 
-    public JsonNode getUserByUsername(String username) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users?username=" + username))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
+    // Метод для видалення об'єкта
+    public static String deleteUser(int id) throws IOException {
+        return sendRequest(BASE_URL + "/" + id, "DELETE", null);
     }
 
-    public JsonNode getUserById(int userId) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users/" + userId))
-                .GET()
-                .build();
+    private static String sendRequest(String urlString, String method, String jsonInputString) throws IOException {
+        URL url = new URL(urlString);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod(method);
+        connection.setRequestProperty("Content-Type", "application/json; utf-8");
+        connection.setRequestProperty("Accept", "application/json");
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
-    }
-
-    public JsonNode getPostsByUser(int userId) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users/" + userId + "/posts"))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
-    }
-
-    public JsonNode getCommentsByPostId(int postId) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/posts/" + postId + "/comments"))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        return objectMapper.readTree(response.body());
-    }
-
-    public JsonNode getOpenTasksForUser(int userId) throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/users/" + userId + "/todos"))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            return null;
-        }
-
-        JsonNode tasksNode = objectMapper.readTree(response.body());
-        ArrayNode openTasks = objectMapper.createArrayNode();
-
-        tasksNode.forEach(task -> {
-            if (!task.get("completed").asBoolean()) {
-                openTasks.add(task);
+        if (jsonInputString != null && !jsonInputString.isEmpty()) {
+            connection.setDoOutput(true);
+            try (OutputStream os = connection.getOutputStream()) {
+                byte[] input = jsonInputString.getBytes("utf-8");
+                os.write(input, 0, input.length);
             }
-        });
+        }
 
-        return openTasks;
-    }
-
-    public boolean fetchAndSaveCommentsForLastPost(int userId) {
-        try {
-            JsonNode userNode = getUserById(userId);
-            if (userNode == null) {
-                return false;
-            }
-
-            JsonNode postsNode = getPostsByUser(userId);
-            if (postsNode == null || !postsNode.isArray() || postsNode.size() == 0) {
-                return false;
-            }
-
-            int lastPostId = postsNode.get(postsNode.size() - 1).get("id").asInt();
-            JsonNode commentsNode = getCommentsByPostId(lastPostId);
-            if (commentsNode == null) {
-                return false;
-            }
-
-            String fileName = "user-" + userId + "-post-" + lastPostId + "-comments.json";
-            writeToFile(commentsNode.toString(), fileName);
-            return true;
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-            return false;
+        int responseCode = connection.getResponseCode();
+        InputStream inputStream = (responseCode < HttpURLConnection.HTTP_BAD_REQUEST) ? connection.getInputStream() : connection.getErrorStream();
+        try (Scanner scanner = new Scanner(inputStream, "UTF-8")) {
+            return scanner.useDelimiter("\\A").hasNext() ? scanner.next() : "";
         }
     }
 
-    public boolean fetchAndDisplayOpenTasks(int userId) {
-        try {
-            JsonNode tasksNode = getOpenTasksForUser(userId);
-            if (tasksNode == null) {
-                return false;
-            }
+    public static void getCommentsForLastPost(int userId) throws IOException {
+        String postsUrl = "https://jsonplaceholder.typicode.com/users/" + userId + "/posts";
+        String postsResponse = sendRequest(postsUrl, "GET", null);
 
-            System.out.println("Open tasks for user " + userId + ":");
-            System.out.println(tasksNode.toPrettyString());
-            return true;
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-            return false;
+        JSONArray posts = new JSONArray(postsResponse);
+        JSONObject lastPost = null;
+        int maxId = -1;
+        for (int i = 0; i < posts.length(); i++) {
+            JSONObject post = posts.getJSONObject(i);
+            int postId = post.getInt("id");
+            if (postId > maxId) {
+                maxId = postId;
+                lastPost = post;
+            }
         }
+
+        if (lastPost == null) {
+            System.out.println("No posts found for user " + userId);
+            return;
+        }
+
+        int lastPostId = lastPost.getInt("id");
+        String commentsUrl = "https://jsonplaceholder.typicode.com/posts/" + lastPostId + "/comments";
+        String commentsResponse = sendRequest(commentsUrl, "GET", null);
+
+        String fileName = "user-" + userId + "-post-" + lastPostId + "-comments.json";
+        try (FileWriter fileWriter = new FileWriter(fileName)) {
+            fileWriter.write(commentsResponse);
+        }
+
+        System.out.println("Comments for the last post of user " + userId + " saved to " + fileName);
     }
 
-    private void writeToFile(String content, String fileName) {
-        try (FileWriter writer = new FileWriter(fileName)) {
-            writer.write(content);
-        } catch (IOException e) {
-            e.printStackTrace();
+    public static void getOpenTodos(int userId) throws IOException {
+        String todosUrl = "https://jsonplaceholder.typicode.com/users/" + userId + "/todos";
+        String todosResponse = sendRequest(todosUrl, "GET", null);
+
+        JSONArray todos = new JSONArray(todosResponse);
+        JSONArray openTodos = new JSONArray();
+        for (int i = 0; i < todos.length(); i++) {
+            JSONObject todo = todos.getJSONObject(i);
+            if (!todo.getBoolean("completed")) {
+                openTodos.put(todo);
+            }
         }
-    }
 
-    public static void main(String[] args) {
-        int userId = 1;
-        UserApiServiceSecond userApiService = new UserApiServiceSecond();
-
-        try {
-            JsonNode userNode = userApiService.getUserById(userId);
-            if (userNode != null) {
-                System.out.println("User details:");
-                System.out.println(userNode.toPrettyString());
-            } else {
-                System.out.println("Failed to fetch user details.");
-            }
-
-            JsonNode postsNode = userApiService.getPostsByUser(userId);
-            if (postsNode != null) {
-                System.out.println("User posts:");
-                System.out.println(postsNode.toPrettyString());
-            } else {
-                System.out.println("Failed to fetch user posts.");
-            }
-
-            if (userApiService.fetchAndSaveCommentsForLastPost(userId)) {
-                System.out.println("Comments saved to file.");
-            } else {
-                System.out.println("Failed to save comments.");
-            }
-
-            if (userApiService.fetchAndDisplayOpenTasks(userId)) {
-                System.out.println("Displayed open tasks.");
-            } else {
-                System.out.println("Failed to display open tasks.");
-            }
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
+        System.out.println("Open todos for user " + userId + ": " + openTodos.toString(2));
     }
 }
